--- a/QCMs/1_07_QCM.md
+++ b/QCMs/1_07_QCM.md
@@ -122,8 +122,7 @@ E. 10A
 11. Remplissez les valeurs suivantes ... la section de fil minimum en aval disjoncteur
 
 
-| Section de fil minimum en mm² | Disjoncteur Calibre maximum
-en Ampères |
+| Section de fil minimum en mm² | Disjoncteur Calibre maximum en Ampères |
 | 10 |  |
 |  | 16 |
 |  | 25 |
