--- a/QCMs/1_07_QCM.md
+++ b/QCMs/1_07_QCM.md
@@ -1,13 +1,13 @@
 # CAP Elec
 ## Foley Services Elec - [Programme 1ère partie](CAP Elec.md)
 
-### 1.03 QCM Protections domestiques
+### 1.07 QCM Protections domestiques
 
 [Le corrigé de ce QCM](./1.07 protections domestiques corrigé.pdf)
 
 Nom et Prénom	: **GUY MELANÇON**	Date : **3 SEPTEMBRE 2024**
 
-1.	Un dispositif différentiel réagis selon
+1.	Un dispositif différentiel réagit selon
 
 A. Le courant dans la phase
 
@@ -15,7 +15,7 @@ B. Le courant dans le neutre
 
 C. Le courant dans le fil de terre
 
-D. La différence de courant entre les conducteurs actifs
+D. **La différence de courant entre les conducteurs actifs**
 
 E. La différence de tension entre les conducteurs actifs
 
@@ -25,7 +25,7 @@ A. Des court-circuits
 
 B. Des surcharges / surintensités
 
-C. Des défauts d’isolement
+C. **Des défauts d’isolement**
 
 D. Des inversions de rotation
 
@@ -35,7 +35,7 @@ E. La rupture du neutre
 
 A. Des court-circuits
 
-B. Des surcharges / surintensités
+B. **Des surcharges / surintensités**
 
 C. Des défauts d’isolement
 
@@ -45,7 +45,7 @@ E. De la rupture du neutre
 
 4. Un disjoncteur magnétothermique protège contre
 
-A. Des court-circuits & des surcharges / surintensités
+A. **Des court-circuits & des surcharges / surintensités**
 
 B. Des chutes de tension
 
@@ -59,7 +59,7 @@ E. De la rupture du neutre
 
 A. Oui
 
-B. Non
+B. **Non**
 
 C. Certains, ça dépend le type (A, AC, HPI, etc.)
 
@@ -69,7 +69,7 @@ D. Non, sauf quand c’est associé avec une prise de terre seulement en domesti
 
 A. Oui
 
-B. Non
+B. **Non**
 
 C. Certains, ça dépend le type (A, AC, HPI, etc.)
 
@@ -90,7 +90,7 @@ D. Non, sauf quand c’est associé avec une prise de terre seulement en domesti
 
 A. Des court-circuits
 
-B. Des surcharges / surintensités
+B. **Des surcharges / surintensités**
 
 C. Des défauts d’isolement
 
@@ -101,7 +101,7 @@ E. De la rupture du neutre
 
 9. La partie magnétique d’un disjoncteur protège conte
 
-A. Des court-circuits
+A. **Des court-circuits**
 
 B. Des surcharges / surintensités
 
@@ -114,7 +114,7 @@ E. De la rupture du neutre
 10.	Un différentiel domestique (inter. diff.) doit avoir une sensibilité de
 
 A. 0.01A
-B. 0.03A
+B. **0.03A**
 C. 500mA
 D. 1A
 E. 10A
@@ -123,6 +123,7 @@ E. 10A
 
 
 | Section de fil minimum en mm² | Disjoncteur Calibre maximum en Ampères |
+| ----------------------------- | -------------------------------------- |
 |              10               |                                        |
 |                               |                  16                    |
 |                               |                  25                    |
