Corrige link to md docs

--- a/1ere_partie/QCMs/1_01_QCM.md
+++ b/1ere_partie/QCMs/1_01_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.01 QCM Questionnaire Grandeurs Electriques
 
-[Le corrigé de ce QCM](./1.01 grandeurs. corrigé.pdf)
+[Le corrigé de ce QCM](./1.01_QCM.md)
 
 
 Nom et Prénom	: 	Date : 
