--- a/1ere_partie/QCMs/1_03_QCM.md
+++ b/1ere_partie/QCMs/1_03_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.03 QCM Questionnaire Grandeurs Electriques
 
-[Le corrigé de ce QCM](./1.03 résistances corrigé.pdf)
+[Le corrigé de ce QCM](./1_03_QCM.md)
 
 
 Nom et Prénom	: 	Date : 
