--- a/1ere_partie/QCMs/1_07_QCM.md
+++ b/1ere_partie/QCMs/1_07_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.07 QCM Protections domestiques
 
-[Le corrigé de ce QCM](./1.07 protections domestiques corrigé.pdf)
+[Le corrigé de ce QCM](./1_07_QCM.md)
 
 Nom et Prénom	: 	Date : 
 
