--- a/1ere_partie/QCMs/1_16_QCM.md
+++ b/1ere_partie/QCMs/1_16_QCM.md
@@ -3,10 +3,7 @@
 
 ### 1.16 QCM Eclairage
 
-[Le corrigé de ce QCM](./1.16 éclairage corrigé.pdf)
-
-Nom et Prénom	: 	Date : 
-
+[Le corrigé de ce QCM](./1_16_QCM.md)
 
 1. Quelle précaution faut-il prendre lors de pose de spots encastrés dans les combles ?
 
