--- a/1ere_partie/QCMs/1_37_QCM.md
+++ b/1ere_partie/QCMs/1_37_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.37 QCM Terre / LES /LEP
 
-[Le corrigé de ce QCM](./1.37 Terre, LEP, LES.pdf)
+[Le corrigé de ce QCM](./1_37_QCM_corrige.md)
 
 
 Nom et Prénom	: 	Date : 
