--- a/1ere_partie/QCMs/1_40_QCM.md
+++ b/1ere_partie/QCMs/1_40_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.40 QCM Régime de Neutre ou Schéma de Liaison à la Terre (SLT)
 
-[Le corrigé de ce QCM](./1.40 Terre, LEP, LES.pdf)
+[Le corrigé de ce QCM](./1_40_QCM_corrige.md)
 
 
 Nom et Prénom	: 	Date : 
