--- a/1ere_partie/QCMs/1_03_QCM.md
+++ b/1ere_partie/QCMs/1_03_QCM.md
@@ -3,7 +3,7 @@
 
 ### 1.03 QCM Questionnaire Grandeurs Electriques
 
-[Le corrigé de ce QCM](./1_03_QCM.md)
+[Le corrigé de ce QCM](./1_03_QCM_corrige.md)
 
 
 Nom et Prénom	: 	Date : 
@@ -44,10 +44,10 @@ Nom et Prénom	: 	Date :
  
  E. Donnée par la durée de temps, et la puissance
 
-4. Calculez la résistance équivalant des trois résistances en séries : $$1000 \Omega$$, $$100 \Omega$$, $$10 K\Omega$$
+4. Calculez la résistance équivalant des trois résistances en séries : $1000 \Omega$, $100 \Omega$, $10 K\Omega$
 
 
-5.	Calculez la résistance équivalant des trois résistances en parallèle : $$R_1 = 1000 \Omega$$, $$R_2 = 100 \Omega$$, $$R_3 = 10 K\Omega$$
+5.	Calculez la résistance équivalant des trois résistances en parallèle : $R_1 = 1000 \Omega$, $R_2 = 100 \Omega$, $R_3 = 10 K\Omega$
 
 
-6. Calculez la résistance équivalant des deux résistances en parallèle : $$R_1 = 1000 \Omega = 1 K\Omega$$, $$R_2 = 100 \Omega = 0,1 K \Omega$$, mise en séries avec une troisième résistance de $$R_3 = 10 K\Omega$$
+6. Calculez la résistance équivalant des deux résistances en parallèle : $R_1 = 1000 \Omega = 1 K\Omega$, $R_2 = 100 \Omega = 0,1 K \Omega$, mise en séries avec une troisième résistance de $R_3 = 10 K\Omega$
