--- a/2eme_partie/QCMs/1_53_QCM.md
+++ b/2eme_partie/QCMs/1_53_QCM.md
@@ -12,7 +12,8 @@
 Nom et Prénom	:	Date :
 
 1. item
-   a. subitem
+   - subitem
+   - second subitem
 
 1. Un dispositif différentiel réagis selon:
 
