--- a/1ere_partie/QCMs/1_03_QCM.md
+++ b/1ere_partie/QCMs/1_03_QCM.md
@@ -8,7 +8,7 @@
 
 Nom et Prénom	: 	Date : 
 
-1.	En séries, la résistance équivalant de trois résistances est
+1.	En série, la résistance équivalente à trois résistances est:
 
    A. Plus petit que la plus petite
 
@@ -20,7 +20,7 @@ Nom et Prénom	: 	Date :
 
    E. La même que le plus petite
 
-2. En parallèle, la résistance équivalant de trois résistances est   
+2. En parallèle, la résistance équivalente à trois résistances est:
 
    A. Plus petit que la plus petite
 
@@ -32,7 +32,7 @@ Nom et Prénom	: 	Date :
 
    E. La même que le plus petite
 
-3.	La résistance est
+3.	La résistance est:
 
    A. La différence de potentiel électrique entre plusieurs points de référence
 
